[package]
name = "mercle_token"
version = "1.0.0"
description = "Mercle Token Contract - Professional token management with signature-based claims and freezing capabilities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mercle_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

